Fix word-wrap style for pre tag

--- a/themes/berlin/style.css
+++ b/themes/berlin/style.css
@@ -403,6 +403,8 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     word-wrap: break-word; }
+    #main pre {
+      word-wrap: normal; }
 
   #sidebar {
     float: left;
@@ -413,7 +415,9 @@ body {
     padding-right: 1em;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    word-wrap: break-word; } }
+    word-wrap: break-word; }
+    #sidebar pre {
+      word-wrap: normal; } }
 @media screen and (min-width: 110.1em) {
   body {
     font-size: 1.125em; }
